white spaces collapse issue fix in chat input

--- a/src/components/chatwindow/sass/footer.scss
+++ b/src/components/chatwindow/sass/footer.scss
@@ -18,6 +18,7 @@
         max-height: 70px;
         overflow-x: hidden;
         overflow-y: auto;
+		white-space: pre;
     }
     .chatInputBoxPlaceholder {
         position: absolute;
